# cYclients

./: .gitignore  CMakeLists.txt  Makefile.am  ReadMe.md  cYclients.def  cYclients.dsp  cYclients.dsw  cYclients.h  cYclients_test.dsp  configure.ac  test.c
cYclients.xcodeproj/: kuzmich.mode2  kuzmich.mode2v3  kuzmich.pbxuser  project.pbxproj
src/: auth.c  categories.c  companies.c  config.h  curl_transport.c  curl_transport.h  json_to_struct.h  log.c  log.h  services.c  structs.c  structs.h  token.c  users.c
winnt/curl/lib/: libcurl.la
